--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "customclothestcc.github.io/CustomClothes_React",
   "name": "admincc",
   "private": true,
   "version": "0.0.0",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -16,6 +19,7 @@
     "@mui/material": "^5.16.7",
     "@mui/x-data-grid": "^5.17.26",
     "@testing-library/react": "^16.0.1",
+    "gh-pages": "^6.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
