Adicionando url do git pages, apos a instação do gh-pages no projeto

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "customclothestcc.github.io/CustomClothes_React",
+  "homepage": "https://customclothestcc.github.io/CustomClothes_React/",
   "name": "admincc",
   "private": true,
   "version": "0.0.0",
